RESOLVED FIXED21757
Should not define PLATFORM(WIN,MAC,GTK) when PLATFORM(CHROMIUM) is defined
https://bugs.webkit.org/show_bug.cgi?id=21757
Summary Should not define PLATFORM(WIN,MAC,GTK) when PLATFORM(CHROMIUM) is defined
Darin Fisher (:fishd, Google)
Reported 2008-10-20 12:58:29 PDT
Should not define PLATFORM(WIN,MAC,GTK) when PLATFORM(CHROMIUM) is defined PLATFORM(CHROMIUM) also implies HAVE_ACCESSIBILITY.
Attachments
v1 patch (1.36 KB, patch)
2008-10-20 13:00 PDT, Darin Fisher (:fishd, Google)
eric: review-
v1.1 patch (1.41 KB, patch)
2008-10-22 00:52 PDT, Darin Fisher (:fishd, Google)
eric: review+
Darin Fisher (:fishd, Google)
Comment 1 2008-10-20 13:00:57 PDT
Created attachment 24528 [details] v1 patch Simple PLATFORM(CHROMIUM) change.
Eric Seidel (no email)
Comment 2 2008-10-21 14:45:49 PDT
Comment on attachment 24528 [details] v1 patch The platform.h changes look wrong. I see an added #if w/o any #endif
Darin Fisher (:fishd, Google)
Comment 3 2008-10-22 00:52:46 PDT
Created attachment 24553 [details] v1.1 patch Yes, that's unfortunate. I uploaded the wrong version of the patch :( Now, with glorious #elif goodness.
Eric Seidel (no email)
Comment 4 2008-10-22 08:15:46 PDT
Comment on attachment 24553 [details] v1.1 patch Looks fine. I think eventually much of this HAVE_* goop needs to move out of Platform.h, but that's not really relevant to this patch.
Darin Fisher (:fishd, Google)
Comment 5 2008-10-22 09:47:46 PDT
Note You need to log in before you can comment on or make changes to this bug.