2008-10-22  Darin Fisher  <darin@chromium.org>

Reviewed by Eric Seidel.

        Should not define PLATFORM(WIN,MAC,GTK) when PLATFORM(CHROMIUM) is defined
        https://bugs.webkit.org/show_bug.cgi?id=21757

        PLATFORM(CHROMIUM) implies HAVE_ACCESSIBILITY

        * wtf/Platform.h:



Canonical link: https://commits.webkit.org/30008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37783 268f45cc-cd09-0410-ab3c-d52691b4dbfc